# abe-csi

./: .drone.yaml  Cargo.toml  Dockerfile  build.rs
k8s/: controller.yaml  csi-driver.yaml  debian-pod.yaml  node-daemonset.yaml  node.yaml  postgres-operator.yaml  postgres-pod.yaml  pvc.yaml  rbac.yaml  storageclass.yaml
proto/: csi.proto
scripts/: abe-connect-and-mount  abe-create-volume  abe-delete-volume  abe-unmount-and-disconnect  common.sh  entrypoint.sh
src/: controller.rs  identity.rs  main.rs  node.rs
