[package]
name = "abe-csi-rs"
version = "0.1.3"
edition = "2021"
rust-version = "1.87"

[dependencies]
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"
